Added options icon in the calculator

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -6,7 +6,9 @@
     <title>Calculator</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="flex justify-center text-white items-center h-screen bg-gray-200">
+  <body
+    class="flex justify-center text-white items-center h-screen bg-gray-200"
+  >
     <div class="max-w-sm w-full bg-[#1C1B21] rounded-xl overflow-hidden">
       <div class="relative flex">
         <input
@@ -17,6 +19,22 @@
         <span
           class="absolute h-2 w-10 bg-[#C3C2CC] rounded-full bottom-2 right-0 left-0 mx-auto hover:cursor-pointer"
         ></span>
+        <a href="#">
+          <svg
+            class="w-6 h-6 text-[#C3C2CC] absolute right-5 top-5"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-width="2"
+              d="M12 6h0m0 6h0m0 6h0"
+            />
+          </svg>
+        </a>
       </div>
       <div class="mx-10">
         <div class="flex flex-row justify-between items-center my-2">
